# onenote-to-markdown

./: DEVELOPMENT_PLAN.md  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
onenote2md/: __main__.py  batch_export.py  cli.py  config.py  converter.py  gui.py  local_parser.py  one_to_pdf.py  pdf_converter.py
